# walter-mlii

./: README.md  requirements.txt
Laboratory_1/point_11/iris_app/: api.py
Laboratory_1/point_11/iris_app/train_model/: iris_model.pkl  pca_knn.ipynb
Laboratory_1/point_2/: point_2.ipynb
Laboratory_1/point_3/uns-package/: README.md
Laboratory_1/point_3/uns-package/tests/: test_pca.py  test_svd.py  test_tsne.py  test_uns__package.py
Laboratory_1/point_4/: point_4.ipynb
Laboratory_1/point_9/: umap_example.ipynb
Laboratory_2/point_1/: point_1.docx  ~$oint_1.docx
Laboratory_2/point_2/: point_2.docx
Laboratory_2/point_3/: point_3.docx
Laboratory_2/point_4/: README.md  pyproject.toml
Laboratory_2/point_4/src/uns_package/: KMEANS.py  KMEDOIDS.py  PCA.py
Laboratory_2/point_4/tests/: test_kmeans.py  test_kmedoids.py
Laboratory_2/point_5/: point_5.ipynb
Laboratory_3/: Poster.pptx  Presentación.pptx  RandomForestPredictions.csv  RandomForestRegressor_FAMD_grid.csv  RandomForestRegressor_PCA_grid.csv  RandomForestRegressor_grid.csv  data_iteration_1.csv  references.txt
point_1/: point_1.ipynb
point_10/: LDA.md  lda_example.ipynb
point_11/iris_app/: api.py
point_11/iris_app/train_model/: pca_knn.ipynb
point_3/uns-package/: README.md  pyproject.toml
point_3/uns-package/src/uns_package/: PCA.py  SVD.py  TSNE.py
point_4/: point_4.ipynb
point_5_6_7/: point_5_6_7.ipynb
point_8/: kernel_pca.py  point_8.ipynb
point_9/: UMAP.md  umap_example.ipynb
